# gamai-research

./: .gitignore  README.md  SOP_GLOBAL.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
config/: config_blockD.json  pipeline_config.example.yaml  pipeline_config.yaml
src/: SOP.md  __init__.py  test_mocks.py
src/ai_integration/: __init__.py  ai_integration.md  constants.py  indobert_client.py  kimi_client.py  open_router_client.py  openclaw_client.py  prompt_builder.py
src/core_analysis/: __init__.py  core_analysis.md  deskriptif_likert.py  master_selection.py  orchestrator.py  profiling_demografi.py  qc_final_check.py  uji_hetero.py  uji_multikol.py  uji_normalitas.py  uji_reliabilitas.py  uji_validitas.py  validator.py
src/core_hypothesis/: __init__.py  constants.py  core_hypothesis.md  evaluator.py  orchestrator.py
src/core_mediation/: __init__.py  bootstrap_core.py  constants.py  core_mediation.md  decomposition_core.py  orchestrator.py
src/core_nlp/: __init__.py  aggregator.py  cleaner.py  constants.py  core_nlp.md  facade.py  frequency_analyzer.py  mapping_output.py  normalizer.py  orchestrator.py  preprocessing.py  sentiment_engine.py  serializer.py  stemmer.py  stopword_filter.py  visualizer.py
src/core_regression/: __init__.py  _core.py  constants.py  core_regression.md  estimate_antecedent_effects.py  estimate_mediator_outcomes.py  orchestrator.py  substruktur1_core.py  substruktur2_core.py
src/core_reproducibility/: __init__.py  config_builder.py  config_persistor.py  constants.py  directory_bootstrap.py  orchestrator.py  schema.py
src/core_synthesis/: __init__.py  assembly_final.py  generator_setup.py  hierarchical_sim_laten.py  hierarchical_sim_likert.py  ingestion.py  monte_carlo.py  orchestrator.py  post_processing_likert.py  preprocessing_laten.py  synthesis_demo.py  synthesis_text.py
src/core_visualization/: __init__.py  constants.py  orchestrator.py  path_diagram.py  radar_chart.py
src/utils/: __init__.py  config_loader.py  constants.py  excel_exporter.py  load_array.py  logger.py  schema_alignment.py  xlsx_to_csv_converter.py
tests/: test_ai_integration.py  test_config_builder.py  test_core_hypothesis.py  test_core_mediation.py  test_core_mediation_decomposition.py  test_core_regression.py  test_core_visualization.py  test_data_validation.py  test_indobert_client.py  test_radar_chart.py  test_xlsx_to_csv_converter.py
tests/dummy_data/: df_report_master.csv
tests/nlp_test/: test_aggregator.py  test_frequency_analyzer.py  test_orchestrator.py  test_preprocessing.py  test_sentiment_engine.py
(+13 files in other folders)
