[project]
name = "thesis-synth-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
