[project]
name = "thesis-synth-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pingouin>=0.6.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "graphviz>=0.21",
    "tenacity>=9.1.4",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "safetensors>=0.7.0",
    "sastrawi>=1.0.1",
    "pysastrawi>=1.2.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-reportlog>=0.4.0",
    "pytest-json-report>=1.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--report-log=logs/last_test_results.jsonl"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
managed = true
